# subsquid-data-streaming

./: Cargo.toml  README.md
examples/: basic_log_filter.rs  basic_transaction_filter.rs  log_and_transaction_filter.rs
src/: data_source.rs  data_stream.rs  errors.rs  lib.rs  router_client.rs  utils.rs  worker_client.rs  worker_query.rs
src/fields/: fields.rs  log_fields.rs  mod.rs  transaction_fields.rs
src/filters/: log_filter.rs  mod.rs  transaction_filter.rs
src/models/: data_item.rs  log_entry.rs  mod.rs  transaction_entry.rs
src/options/: field_options.rs  log_options.rs  mod.rs  transaction_options.rs
tests/: test_data_stream_integration.rs  test_error_handling.rs  test_filter_handling.rs
